Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/Sample App for the Book/Sample App for the Book.json
+++ b/ThreatDragonModels/Sample App for the Book/Sample App for the Book.json
@@ -1,7 +1,8 @@
 {
   "summary": {
     "title": "Sample App for the Book",
-    "owner": "Manjula"
+    "owner": "Manjula",
+    "description": "sampleapp."
   },
   "detail": {
     "contributors": [],
